<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy chat</string>
    <string name="setting">Set up</string>
    <string name="about">regarding</string>
    <string name="headicontitle">Set Avatar picture:</string>
    <string name="info_title">Personal data</string>
    <string name="edit_nickname">Modify remarks</string>
    <string name="remark">remark:</string>
    <string name="header">head sculpture</string>
    <string name="set_dialog_title">Information setting</string>
    <string name="nicke_name_label">nickname:</string>
    <string name="ok">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="current_online_label">Current online</string>
    <string name="send_file">Send file</string>
    <string name="send_msg">Send message</string>
    <string name="pls_select_opr">Choose the operation you want to do</string>
    <string name="init_msg_count">%1$d</string>
    <string name="send">send</string>
    <string name="file">file</string>
    <string name="current_path_label">Current path: </string>
    <string name="content_is_empty">Content can not be sent to the air!</string>
    <string name="waiting_for_receive_file">Waiting for each other to receive files..</string>
    <string name="be_sending_file">Sending file</string>
    <string name="sending_file_to_you">Sending a file to you!</string>
    <string name="accept">Receive</string>
    <string name="refuse">Refuse</string>
    <string name="close">close</string>
    <string name="select_file_for_send">Select the file to send</string>
    <string name="select_path_for_save">Select the folder for receiving files</string>
    <string name="data_receive_error">Data receiving error</string>
    <string name="refuse_receive_file">Refused to receive documents</string>
    <string name="file_send_success">&#160; file sending successfully!</string>
    <string name="file_receive_success">&#160; file receive success!</string>
    <string name="folder_can_not_write">Folder is not to write, can not save the file!</string>
    <string name="ready_for_receive_file">Ready to receive file</string>
    <string name="ready_for_send_file">Ready to send file</string>
    <string name="start_to_receive_file">Receiving file</string>
    <string name="start_to_send_file">Sending file</string>
    <string name="mac_address">MAC address:</string>
    <string name="address_str">address</string>
    <string name="select_file">Select file</string>
    <string name="send_file1">send file</string>
    <string name="null_name">null</string>
    <string name="ensure">ensure</string>
    <string name="back">&lt; return </string>
    <string name="title_activity_apply">ApplyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="people_want_to_apply">The following people want to add you as a friend</string>
    <string name="aa">aa</string>
    <string name="title_activity_on_line">OnLineActivity</string>
    <string name="online_users">Online users</string>
    <string name="users_count">Number:</string>
    <string name="add_friends">Add as a friend</string>
    <string name="title_activity_send_apply">SendApplyActivity</string>
    <string name="friends_apply">Buddy verification</string>
    <string name="delete_apply">Delete friends verification</string>
    <string name="confirm_delete_apply">Verify the empty buddy list?</string>
    <string name = "send_message">Verification message</string>
    <string name = "apply_hint">I am..</string>
    <string name="my_contacts">Contact person</string>
    <string name="cancle">&lt; Cancel</string>
    <string name="finish">Complete</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="title_activity_edit_nickname">SetNickNameActivity</string>
    <string name="ip_address">IP address：</string>
    <string name="has_agreed">Agreed</string>
    <string name="has_disagreed">Rejected</string>
    <string name="agree">Agree</string>
    <string name="disagree">Rejecte</string>
    <string name="send_apply_success">Successfully send add friend request</string>
    <string name="up_level">Upper level</string>
    <string name="root">Root directory</string>
    <string name="applyMsg">message:</string>
    <string name="delete_friend">delete friend</string>
    <string name="confirm_delete_friend">Confirm delete the friend and you will be removed from the list of the friend</string>

</resources>
