<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_bg"
    android:orientation="vertical" >
  
  <TextView android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:textColor="@android:color/white"
  	android:textSize="20dp"
  	android:gravity="center"
  	android:id="@+id/file_select_title"/>
  <!-- 显示当前路径 -->
  <TextView 
    android:id="@+id/mPath"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="16dp"
    android:textColor="@android:color/white"/>
  
  <!-- 上边按钮 -->
  <LinearLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="horizontal">

  	<Button
  	    android:id="@+id/return_root_path"
  	    android:layout_width="fill_parent"
  	    android:layout_height="wrap_content"
  	    android:layout_marginLeft="10dp"
  	    android:layout_marginRight="5dp"
  	    android:layout_weight="1"
  	    android:background="@drawable/shape_button_pressed"
  	    android:drawableLeft="@drawable/folder_root"
  	    android:text="@string/root" />

  	 <Button
  	     android:id="@+id/return_parent_path"
  	     android:layout_width="fill_parent"
  	     android:layout_height="wrap_content"
  	     android:layout_marginLeft="5dp"
  	     android:layout_marginRight="10dp"
  	     android:layout_weight="1"
  	     android:background="@drawable/shape_button_pressed"
  	     android:drawableLeft="@drawable/folder_up"
  	     android:text="@string/up_level" />

  </LinearLayout>
  
  <!-- 文件列表 -->
  <ListView 
    android:id="@android:id/list"
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  </ListView>
  
  <!-- 底部按钮 -->
  <LinearLayout android:gravity="center"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

	<Button
	    android:id="@+id/buttonConfirm"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="5dp"
	    android:layout_weight="1"
	    android:background="@drawable/shape_button_pressed"
	    android:text="@string/ok" />

    <Button
        android:id="@+id/buttonCancle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/shape_button_pressed"
        android:text="@string/cancel" />
	
  </LinearLayout>
</LinearLayout>