<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
         android:background="@drawable/blue" >

        <TextView
            android:id="@+id/onLineUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:text="@string/online_users"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/onLineUsers"
            android:layout_alignBottom="@+id/onLineUsers"
            android:layout_alignParentLeft="true"
            android:text="@string/back"
            android:textColor="@drawable/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/count"
            android:text="@string/users_count"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:text=" 3"
            android:textColor="@color/white" />
        
    </RelativeLayout>


    <ListView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>