<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/blue" >

        <TextView
            android:id="@+id/peopleWantToApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_nickname"
            android:textColor="@drawable/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/peopleWantToApply"
            android:layout_alignBottom="@+id/peopleWantToApply"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/cancle"
            android:textColor="@drawable/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/peopleWantToApply"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="@string/finish"
            android:textColor="@drawable/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/remark"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/textView2"
            android:text="TextView"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/edit_name_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="26dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_menu_edit" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/textView2"
            android:ems="10"
            android:visibility="gone" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_button"
        android:text="TextView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/mac_address"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/myMac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mac"
            android:layout_alignBottom="@+id/mac"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/mac"
            android:text="TextView"
            android:textColor="@color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_button"
        android:text="TextView" />
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/ip_address"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/myIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ip"
            android:layout_alignBottom="@+id/ip"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/ip"
            android:text="TextView"
            android:textColor="@color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_button"
        android:text="TextView" />

</LinearLayout>